<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connect</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">The world is your wall</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Log out of Connect</string>
    <string name="post">Post</string>
    <string name="prompt_post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="progress_post">Posting&#8230;</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="activity_post_title">Create a Post</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="hello_world">Hello World</string>
    <string name="btCoffee">Coffee</string>
    <string name="btlunch">Lunch</string>
    <string name="btRide">Ride</string>
    <string name="btDinner">Dinner</string>
    <string name="title_activity_activities">ActivitiesActivity</string>
    <string name="profile_image">TODO</string>
    <string name="user_name">TODO</string>
    <string name="activity_body">TODO</string>
    <string name="created_at">TODO</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
	<string name="action_signout">Sign Out</string>
	<string name="activity_message">TODO</string>
	<string name="create_activity">Create</string>
	<string name="cancel">Cancel</string>
	<string name="prompt_fname">First Name</string>
	<string name="prompt_lname">Last Name</string>
	<string name="btnAccept"></string>
	<string name="btnCancel"></string>
</resources>