<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btCoffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/btCoffee" 
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btLunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btCoffee"
        android:layout_marginTop="28dp"
        android:text="@string/btlunch" 
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btRide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btLunch"
        android:layout_marginTop="32dp"
        android:text="@string/btRide" 
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btDinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btRide"
        android:layout_marginTop="33dp"
        android:text="@string/btDinner" 
        android:onClick="onClick"/>

</RelativeLayout>
