<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:app="http://schemas.android.com/apk/res/com.nitinag.connect.activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical" 
        android:gravity="center">

     <TextView
        android:id="@+id/tvRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/selector_card_background"
    android:descendantFocusability="afterDescendants"
    android:paddingLeft="5dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp" >

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/profile_icon"
        app:border="true"
        app:border_color="@color/GrayLight"
        app:border_width="1dp"
        app:shadow="true" />

    <!--
         ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" android:contentDescription="@string/profile_image"
        /
    -->

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/ivProfileImage"
        android:text="@string/user_name"
        android:textSize="12sp"
        android:paddingBottom="20dp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/tvActivityBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivProfileImage"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvUserName"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@+id/tvUserName"
        android:text="@string/activity_body"
        android:textColor="#A2A8A8"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="serif" />

    <TextView
        android:id="@+id/created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="10dp"
        android:text="@string/created_at"
        android:textSize="10sp"
        android:typeface="serif" />
   
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/ivProfileImage"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription=""
            android:src="@drawable/ic_accept" />

        <ImageView
            android:id="@+id/ivCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription=""
            android:src="@drawable/ic_cancel" />

        <ImageView
            android:id="@+id/ivAccepted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription=""
            android:src="@drawable/ic_accepted" />
    	</LinearLayout>
	</RelativeLayout>
</LinearLayout>